web/wwwroot/css/directory.css
#directory_results {
    background-color: #fff;
}

.directory {
    font-size: 12px;
    background-color: #f8f8f8;
    border: 2px solid #fff;
    border-radius: 7px;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    padding: 0;
    overflow: clip;
}

.directory .row {
    padding: 0;
}
.directory .col {
    padding: 8px;
    display: block;
}
.directory .ids,
.directory .tools {
    padding: 8px;
}
.directory .contact div,
.directory .ids div,
.directory .tools div {
    flex: 0 0 95%;
}
.directory .ids div {
    font-weight: bold;
}
.directory .ids div span {
    font-weight: normal;
    display: inline-block;
    width: 85px;
    text-align: right;
    margin-right: 0;
}
.directory .contact {
    margin-top: 1em;
}
.directory div {
}
.directory .card_header {
    background-color: #adb5bd;
}
.directory .SVM {
    background-color: #1d4776;
}

.directory .photo {
    width: 87px;
    min-width: 87px;
    max-width: 87px !important;
    padding: 2px;
    margin: 0;
    margin-top: 22px;
}

.directory .photo_avatar {
    min-width: 87px;
    width: 87px;
    max-width: 87px;
    min-height: 111px;
    height: 111px;
    max-height: 111px;
    border: 1px solid #fff;
}

.directory .directory-name,
.directory .directory-username,
.directory .directory-detail,
.directory .directory-level,
.directory .directory-tag {
    line-height: 1.5;
    margin: 0;
    padding: 0;
}
.directory .directory-name {
    font-size: 15px;
    font-weight: 600;
}
.directory .directory-detail {
    font-size: 12px;
    font-weight: 400;
}
.directory .directory-level {
    font-size: 12px;
}
.directory .directory-tag {
    font-size: 11px;
    color: #868e96;
    font-weight: bold;
}
.directory .directory-username {
    font-size: 10px;
}
.directory .top_button {
    color: #fff;
    text-align: center;
    line-height: 40px;
    height: 40px;
    width: 12%;
    max-width: 40px;
    color: #a4b5c8;
}
.directory .top_button:hover {
    color: #fff;
}

